Display fix: sidebar overlapping timetable due to error in previous commit

--- a/static/css/new_timetable/new_timetable.css
+++ b/static/css/new_timetable/new_timetable.css
@@ -379,11 +379,7 @@ input:-moz-placeholder::before  { font-family: fontAwesome; content:'\f002  ';
   #menu-btn {
     font-size:1.4vw;
   }
-  .side-container{
-    left:0% !important;
-    width:95% !important;
-    z-index:4000;
-  }
+
 }
 @media screen and (max-width: 811px) {
   .fc-event-container {
